@@ -5,6 +5,7 @@
 - More intelligently decide if notes on middle C belong to F clef or G clef
 - In editor popup menus, don't show score options in keyboard mode
 - Fixed docking tracks, which was broken in last release
+- Made 'follow playback' easier to follow by scrolling only on measure change
 
 1.2b3
 - Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
